--- a/index.html
+++ b/index.html
@@ -360,36 +360,34 @@
   </section>
 
   <!-- TEAM -->
+    <!-- TEAM -->
   <section id="team">
     <div class="container">
       <div class="section-head">
         <h2>Наша команда</h2>
-        <p class="muted">Команда профессионалов с техническими и бизнес‑скиллами.</p>
+        <p class="muted">Команда профессионалов с техническими и бизнес-скиллами.</p>
       </div>
       <div class="team">
         <div class="person">
-          <div class="avatar">A</div>
           <h3>Дастанбеков Айтмырза</h3>
           <p class="muted">Team Lead, DevOps</p>
         </div>
         <div class="person">
-          <div class="avatar">N</div>
           <h3>Султанбеков Нурбол</h3>
           <p class="muted">Backend Dev., AI Scientist</p>
         </div>
         <div class="person">
-          <div class="avatar">K</div>
           <h3>Кубатов Кайрат</h3>
           <p class="muted">PM, Business Analyst</p>
         </div>
         <div class="person">
-          <div class="avatar">U</div>
           <h3>Ундуск Никита</h3>
           <p class="muted">Frontend Dev., UX/UI Designer</p>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- CTA -->
   <section id="cta">
